# data-pipeline-ex

./: README.md
deleter/: README.md  pyproject.toml
deleter/deleter/: core.py
deleter/deleter/cli/: commands.py
deleter/deleter/seeder/: commands.py
deleter/deleter/utils/: hubspot_client.py  logger.py
deleter/examples/: contacts.csv
migrator/: .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.windows  README.md  cli.py  pyproject.toml
migrator/config/: loader.py
migrator/config/config-pack/: migration_config.json
migrator/config/config-pack/contacts/: mappings.csv  transformations.json
migrator/src/migrator/cli/: commands.py
migrator/src/migrator/transform/: transform.py  transform_methods.py
migrator/src/migrator/utils/: config.py  csv_to_json_config.py  hubspot_client.py  logger.py
migrator/tests/: conftest.py
migrator/tests/test_cli/: test_commands.py
migrator/tests/test_transform/: test_transform.py  test_transformations_cli_script.sh
migrator/tests/test_utils/: test_config_files.py  test_hubspot_client.py  test_logger.py
